# jnp3_choinka

./: CMakeLists.txt  README.md
src/: D3DApp.cpp  D3DApp.h  PixelShader.hlsl  VertexShader.hlsl  WinMain.cpp  WinMain.h  pixel_shader.h  vertex_shader.h
